a simple demo,one producer and one consumer

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>mq</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mq</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Demo project for Spring Boot Integrate Kafka</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -25,10 +25,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
